--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 emoji-cheet1.md
 emoji-cheet.md
+Architecture _ Development _ Help _ GitLab.pdf
+incoming_email_postfix.md
+install_gitlab_from_source_on_CentOS6.6-Minimal.md.html
