prepare to open source

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ emoji-cheet.md
 Architecture _ Development _ Help _ GitLab.pdf
 incoming_email_postfix.md
 install_gitlab_from_source_on_CentOS6.6-Minimal.md.html
+update/
